Copy startup arguments