@@ -1,11 +1,31 @@
 # Build stage
+
 FROM openjdk:11 AS build
 COPY . /home/reposilite-build
 WORKDIR /home/reposilite-build
-RUN chmod +x gradlew
-RUN ./gradlew shadowJar --no-daemon --debug --stacktrace
+
+RUN $GRADLE_OPTS = " \
+    --add-opens java.base/java.util=ALL-UNNAMED \
+    --add-opens java.base/java.lang=ALL-UNNAMED \
+    --add-opens, java.base/java.lang.invoke=ALL-UNNAMED \
+    --add-opens, java.base/java.util=ALL-UNNAMED \
+    --add-opens, java.prefs/java.util.prefs=ALL-UNNAMED \
+    --add-opens, java.prefs/java.util.prefs=ALL-UNNAMED \
+    --add-opens, java.base/java.nio.charset=ALL-UNNAMED \
+    --add-opens, java.base/java.net=ALL-UNNAMED \
+    --add-opens, java.base/java.util.concurrent.atomic=ALL-UNNAMED \
+    -XX:MaxMetaspaceSize=256m \
+    -XX:+HeapDumpOnOutOfMemoryError \
+    -Xms256m, -Xmx512m \
+    -Dfile.encoding=UTF-8 \
+    -Duser.country \
+    -Duser.language=en \
+    -Duser.variant" && \
+   chmod +x gradlew && \
+   ./gradlew shadowJar --no-daemon --stacktrace
 
 # Build-time metadata stage
+
 ARG BUILD_DATE
 ARG VCS_REF
 ARG VERSION
@@ -20,6 +40,7 @@ LABEL org.label-schema.build-date=$BUILD_DATE \
       org.label-schema.schema-version="1.0"
 
 # Run stage
+
 FROM openjdk:16-slim
 WORKDIR /app
 RUN mkdir -p /app/data
